--- a/PhishingReporter/Properties/Settings.settings
+++ b/PhishingReporter/Properties/Settings.settings
@@ -2,23 +2,23 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="PhishingReporter.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="infosec_email" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Information Security Team &lt;infosec@example.com&gt;</Value>
+    <Setting Name="infosec_email" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Login Sécurité - Support &lt;support@login-securite.com&gt;</Value>
     </Setting>
-    <Setting Name="gophish_url" Type="System.String" Scope="User">
-      <Value Profile="(Default)">http://gophish.example.com</Value>
+    <Setting Name="gophish_url" Type="System.String" Scope="Application">
+      <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="gophish_listener_port" Type="System.String" Scope="User">
-      <Value Profile="(Default)">3338</Value>
+    <Setting Name="gophish_listener_port" Type="System.String" Scope="Application">
+      <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="gophish_custom_header" Type="System.String" Scope="User">
-      <Value Profile="(Default)">X-GOPHISH-ASMN</Value>
+    <Setting Name="gophish_custom_header" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">^</Value>
     </Setting>
-    <Setting Name="support_email" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Plugin Support &lt;support@example.com&gt;</Value>
+    <Setting Name="support_email" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Login Sécurité - Support &lt;support@login-securite.com&gt;</Value>
     </Setting>
-    <Setting Name="plugin_version" Type="System.String" Scope="User">
-      <Value Profile="(Default)">V1.0</Value>
+    <Setting Name="plugin_version" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">v1.0</Value>
     </Setting>
     <Setting Name="suspecious_reports_counter" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
