Add client_trigram to properties
Signed-off-by: Paul Mabileau <paul.mabileau@login-securite.com>

--- a/PhishingReporter/Properties/Settings.settings
+++ b/PhishingReporter/Properties/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="gophish_reports_counter" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="client_trigram" Type="System.String" Scope="Application">
+      <Value Profile="(Default)"></Value>
+    </Setting>
   </Settings>
 </SettingsFile>
