--- a/PhishingReporter/app.config
+++ b/PhishingReporter/app.config
@@ -1,30 +1,43 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
+        
+    
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="PhishingReporter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="PhishingReporter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
+    
+<applicationSettings>
+        <PhishingReporter.Properties.Settings>
+                <setting name="infosec_email" serializeAs="String">
+                        <value>Login Sécurité - Support &lt;support@login-securite.com&gt;</value>
+                </setting>
+                <setting name="gophish_url" serializeAs="String">
+                        <value />
+                </setting>
+                <setting name="gophish_listener_port" serializeAs="String">
+                        <value />
+                </setting>
+                <setting name="gophish_custom_header" serializeAs="String">
+                        <value>^</value>
+                </setting>
+                <setting name="support_email" serializeAs="String">
+                        <value>Login Sécurité - Support &lt;support@login-securite.com&gt;</value>
+                </setting>
+                <setting name="plugin_version" serializeAs="String">
+                        <value>v1.0</value>
+                </setting>
+                <setting name="client_trigram" serializeAs="String">
+                        <value></value>
+                </setting>
+        </PhishingReporter.Properties.Settings>
+    </applicationSettings>
     <userSettings>
         <PhishingReporter.Properties.Settings>
-            <setting name="infosec_email" serializeAs="String">
-                <value>Information Security Team &lt;infosec@example.com&gt;</value>
-            </setting>
-            <setting name="gophish_url" serializeAs="String">
-                <value>http://gophish.example.com</value>
-            </setting>
-            <setting name="gophish_listener_port" serializeAs="String">
-                <value>3338</value>
-            </setting>
-            <setting name="gophish_custom_header" serializeAs="String">
-                <value>X-GOPHISH-ASMN</value>
-            </setting>
-            <setting name="support_email" serializeAs="String">
-                <value>Plugin Support &lt;support@example.com&gt;</value>
-            </setting>
-            <setting name="plugin_version" serializeAs="String">
-                <value>V1.0</value>
-            </setting>
             <setting name="suspecious_reports_counter" serializeAs="String">
                 <value>0</value>
             </setting>
